loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:10: error: value += is not a member of Int
  c+=1;
   ^